--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet-async": "^1.3.0",
     "react-phone-number-input": "^3.2.12",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
